--- a/.github/workflows/prime_factorization_test.yml
+++ b/.github/workflows/prime_factorization_test.yml
@@ -8,5 +8,5 @@ jobs:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
     - uses: actions/checkout@v3
-    - name: All test1
-      run: bash -xv ./test1.bash
+    - name: All test
+      run: bash -xv ./prime_factorization_test.bash
