--- a/.github/workflows/s3_school_credit_generator_test.yml
+++ b/.github/workflows/s3_school_credit_generator_test.yml
@@ -8,5 +8,5 @@ jobs:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
     - uses: actions/checkout@v3
-    - name: All test2
-      run: bash -xv ./test2.bash
+    - name: All test
+      run: bash -xv ./s3_school_credit_generator_test.bash
